# Multi-Agent-Task-Manager

./: README.md
python/: README.md  pyproject.toml
python/src/python/: crew.py  main.py
python/src/python/config/: agents.yaml  tasks.yaml
